deploy/deploy/ingress_alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bold-ingress
  namespace: bold-services
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    #alb.ingress.kubernetes.io/certificate-arn: Amazon Resource Name (ARN) of the Certificate
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
spec:
  #tls:
  #- hosts:
    #- example.com
    #secretName: bold-tls
  rules:
  - #host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: id-web-service
            port:
              number: 6000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: id-api-service
            port:
              number: 6001
      - path: /ums
        pathType: Prefix
        backend:
          service:
            name: id-ums-service
            port:
              number: 6002
      - path: /reporting
        pathType: Prefix
        backend:
          service:
            name: reports-web-service
            port:
              number: 6550
      - path: /reporting/api
        pathType: Prefix
        backend:
          service:
            name: reports-api-service
            port:
              number: 6551
      - path: /reporting/jobs
        pathType: Prefix
        backend:
          service:
            name: reports-jobs-service
            port:
              number: 6552
      - path: /reporting/viewer
        pathType: Prefix
        backend:
          service:
            name: reports-viewer-service
            port:
              number: 6554
      - path: /reporting/reportservice
        pathType: Prefix
        backend:
          service:
            name: reports-reportservice-service
            port:
              number: 6553
